# company-mgr

./: Cargo.toml
.github/workflows/: release.yml
docs/: INSTALL.md
scripts/: install.bat  install.ps1  install.sh
src/: config.rs  installer.rs  main.rs  state.rs  updater.rs
